tests/cases/errors/binary_op.vnm
fn main() {
  let a = [1, 2, 3, "Hello, world!"];
  let b = [4, 5, 6];
  print a + b;
  return 0;
}

main();
